# klit

./: Cargo.toml  notes.md
src/: adapter.rs  document.rs  download.rs  error.rs  main.rs
src/adapter/: asstr.rs  bdsmlibrary.rs  gaggedutopia.rs  sexstories.rs  thefetlibrary.rs
