[package]
name = "klit"
version = "0.3.3"
authors = ["Keep Calm <keepcalmandbyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["blocking"] }
structopt = "0.3.21"
url = "2.2.2"
