[package]
name = "klit"
version = "0.4.3"
authors = ["Keep Calm <keepcalmandbyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
nipper = "0.1.9"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["blocking", "cookies"] }
structopt = "0.3.21"
url = "2.2.2"
