[package]
name = "klit"
version = "0.4.4"
authors = ["Keep Calm <keepcalmandbyo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipper = "0.1.9"
owo-colors = "3.0.1"
regex = "1.5.4"
reqwest = { version = "0.11.6", features = ["blocking", "cookies"] }
structopt = "0.3.25"
url = "2.2.2"
